changed encoding from manual to automatic with URI object